--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,11 @@
     "test": "jest"
   },
   "dependencies": {
-    "axios": "^1.6.0",
+    "@react-native-picker/picker": "^2.5.1",
     "react": "18.2.0",
     "react-native": "0.72.6",
     "react-native-chart-kit": "^6.12.0",
+    "react-native-debugger": "^1.1.0",
     "react-native-histogram": "^0.2.0",
     "react-native-svg": "^13.14.0"
   },
