--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/datetimepicker": "^7.6.1",
     "@react-native-picker/picker": "^2.5.1",
     "react": "18.2.0",
+    "react-hook-form": "^7.48.2",
     "react-native": "0.72.6",
     "react-native-chart-kit": "^6.12.0",
     "react-native-debugger": "^1.1.0",
