--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "react-native": "0.72.6",
     "react-native-chart-kit": "^6.12.0",
     "react-native-debugger": "^1.1.0",
+    "react-native-gesture-handler": "^2.13.4",
     "react-native-histogram": "^0.2.0",
     "react-native-svg": "^13.14.0"
   },
@@ -26,14 +27,16 @@
     "@babel/runtime": "^7.20.0",
     "@react-native/eslint-config": "^0.72.2",
     "@react-native/metro-config": "^0.72.11",
+    "@testing-library/jest-native": "^5.4.3",
+    "@testing-library/react-native": "^12.4.0",
     "@tsconfig/react-native": "^3.0.0",
     "@types/react": "^18.0.24",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
-    "jest": "^29.2.1",
+    "jest": "^29.7.0",
     "metro-react-native-babel-preset": "0.76.8",
-    "react-test-renderer": "18.2.0",
+    "react-test-renderer": "^18.2.0",
     "typescript": "4.8.4"
   },
   "engines": {
