--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@react-native-community/datetimepicker": "^7.6.1",
     "@react-native-picker/picker": "^2.5.1",
+    "moment": "^2.30.1",
     "react": "18.2.0",
     "react-hook-form": "^7.48.2",
     "react-native": "0.72.6",
